syntax = "proto3";

package product;

service ProductService {

    rpc CheckProductExists (CheckProductExistsRequest) returns (CheckProductExistsResponse);

}

message CheckProductExistsRequest {
  string productId = 1; 
}

message CheckProductExistsResponse {
  bool exists = 1;       
}
